[project]
name = "langchain-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain-mcp-adapters>=0.1.13",
    "langchain[anthropic]>=1.0.7",
    "langgraph>=1.0.3",
    "python-dotenv>=1.2.1",
]
